<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gnomon</string>
    <string name="title_section1">Progress</string>
    <string name="title_section2">Home</string>
    <string name="title_section3">Saved</string>
    <string name="action_settings">Settings</string>
    <string name="schoolName">University of Georgia</string>
    <string name="community">Creswell Community</string>
    <string name="building">Creswell</string>
    <string name="floor">1st Floor</string>
        <string name="room">Room 101</string>
    
    <string-array name="compare_array">
        <item>School</item>
        <item>Community</item>
        <item>Hall</item>
        <item>Floor</item>
        <item>Room</item>
    </string-array>
    
    <string-array name="list_of_schools">
        <item>University of Georgia</item>
        <item>Georgia Tech</item>
    </string-array>
    

</resources>
