<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="watch.gnomon.app.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome "
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Markos"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/schoolName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schoolName"
                        android:textSize="17sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/communityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community" />

                    <TextView
                        android:id="@+id/buildingName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/building" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/floorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/floor" />

                    <TextView
                        android:id="@+id/roomName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TableRow
                    android:id="@+id/TableRow12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:focusable="true" >
                   
                    <Button
                        android:id="@+id/school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="30dp"
                        android:minHeight="30dp"
                        android:text="@string/schoolName"
                        android:textSize="13sp" />

                </TableRow>

               <TableRow
                    android:id="@+id/TableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true" >

                    <TextView
                        android:id="@+id/TextView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Daily average last week: " />

                    <TextView
                        android:id="@+id/schoolAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="3433 kWh" />

                </TableRow>

               <TableRow
                    android:id="@+id/TableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true" >

                    <TextView
                        android:id="@+id/TextView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Today&apos;s Total: " />

                    <TextView
                        android:id="@+id/schoolTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="3861 kWh" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <Button
                        android:id="@+id/community"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="30dp"
                        android:minHeight="30dp"
                        android:text="@string/community"
                        android:textSize="13sp" />

                </TableRow>

              <TableRow
                    android:id="@+id/TableRow08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Daily average last week: " />

                    <TextView
                        android:id="@+id/communityAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="923 kWh" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Today&apos;s Total: " />

                    <TextView
                        android:id="@+id/communityTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="876 kWh" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <Button
                        android:id="@+id/building"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="30dp"
                        android:minHeight="30dp"
                        android:text="@string/building"
                        android:textSize="13sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Daily average last week: " />

                    <TextView
                        android:id="@+id/buildingAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="923 kWh" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Today&apos;s Total: " />

                    <TextView
                        android:id="@+id/buildingTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="876 kWh" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <Button
                        android:id="@+id/floor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="30dp"
                        android:minHeight="30dp"
                        android:text="@string/floor"
                        android:textSize="13sp" />

                </TableRow>

               <TableRow
                    android:id="@+id/TableRow02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Daily average last week: " />
                  
                    <TextView
                        android:id="@+id/floorAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="201 kWh" />
                </TableRow>

            <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Today&apos;s Total: " />
                    
                    <TextView
                        android:id="@+id/floorTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="456 kWh" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <Button
                        android:id="@+id/room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="30dp"
                        android:minHeight="30dp"
                        android:text="@string/room"
                        android:textSize="13sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Daily average last week: " />

                    <TextView
                        android:id="@+id/roomAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="43 kWh" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="Today&apos;s Total: " />

                    <TextView
                        android:id="@+id/roomTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="23 kWh" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>